save level headers to source dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ add_executable(convert_obj tools/convert_obj.cpp)
 set(LEVELN 00)
 foreach(N ${LEVELN})
     set(LEVEL_OBJ "${CMAKE_CURRENT_SOURCE_DIR}/levels/level_${N}.obj")
-    set(LEVEL_HPP "${CMAKE_CURRENT_BINARY_DIR}/level_${N}.hpp")
+    set(LEVEL_HPP "${CMAKE_CURRENT_SOURCE_DIR}/levels/level_${N}.hpp")
     add_custom_command(
         OUTPUT "${LEVEL_HPP}"
         COMMAND convert_obj "${LEVEL_OBJ}" "${LEVEL_HPP}"
