improved perspective divide

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED 11)
 
 if(NOT EMSCRIPTEN)
     add_executable(gen_sincos tools/gen_sincos.cpp)
+    add_executable(test_div tools/test_div.cpp ${MINIGOLF_SOURCES})
 endif()
 
 if(MSVC)
