--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,11 @@ foreach(N ${LEVELN})
     )
     target_sources(${PROJECT_NAME} PUBLIC "${LEVEL_HPP}")
     target_sources(${PROJECT_NAME} PUBLIC "${LEVEL_INFO_HPP}")
+    if(WIN32)
+        target_sources(level_editor PUBLIC "${LEVEL_HPP}")
+        target_sources(level_editor PUBLIC "${LEVEL_INFO_HPP}")
+    endif()
 endforeach()
-target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
 
 target_link_libraries(${PROJECT_NAME} PUBLIC git)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED 11)
