--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ set(MINIGOLF_SOURCES
 )
 
 add_executable(convert_obj tools/convert_obj.cpp)
-set(LEVELN 00 01 02 03 04 05 06 07 08 09 10 11 12 13)
+set(LEVELN 00 01 02 03 04 05 06 07 08 09 10 11 12 13 14)
 foreach(N ${LEVELN})
     set(LEVEL_OBJ "${CMAKE_CURRENT_SOURCE_DIR}/levels/level_${N}.obj")
     set(LEVEL_HPP "${CMAKE_CURRENT_SOURCE_DIR}/levels/level_${N}.hpp")
