more save work. probably need to rehash the "play" and "practice" UI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,18 @@ set(MINIGOLF_SOURCES
     save.cpp
 )
 
+add_executable(gen_fxsave tools/gen_fxsave.cpp game.hpp save.cpp)
+target_include_directories(gen_fxsave PUBLIC
+    "${CMAKE_CURRENT_BINARY_DIR}"
+)
+target_compile_definitions(gen_fxsave PUBLIC -DARDUGOLF_FX=1)
+set(FXSAVE_BIN "${CMAKE_CURRENT_SOURCE_DIR}/fxsave.bin")
+add_custom_command(
+    OUTPUT "${FXSAVE_BIN}"
+    COMMAND gen_fxsave "${FXSAVE_BIN}"
+    DEPENDS gen_fxsave
+)
+
 add_executable(bin2c tools/bin2c.c)
 set(FX_DATA_HEADER "${CMAKE_CURRENT_BINARY_DIR}/FX_DATA.hpp")
 add_custom_command(
@@ -67,8 +79,8 @@ list(APPEND MINIGOLF_SOURCES "${FX_DATA_HEADER}")
 set(FX_SAVE_HEADER "${CMAKE_CURRENT_BINARY_DIR}/FX_SAVE.hpp")
 add_custom_command(
     OUTPUT "${FX_SAVE_HEADER}"
-    COMMAND bin2c "${CMAKE_CURRENT_SOURCE_DIR}/fxsave.bin" "${FX_SAVE_HEADER}" "FX_SAVE"
-    DEPENDS bin2c "${CMAKE_CURRENT_SOURCE_DIR}/fxsave.bin"
+    COMMAND bin2c "${FXSAVE_BIN}" "${FX_SAVE_HEADER}" "FX_SAVE"
+    DEPENDS bin2c "${FXSAVE_BIN}"
 )
 list(APPEND MINIGOLF_SOURCES "${FX_SAVE_HEADER}")
 
